// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayNavigationBar collapses the dropdown expanded when trigger element is clicked 1`] = `Promise {}`;

exports[`ClayNavigationBar renders 1`] = `
<nav
  className="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
>
  <div
    className="container-fluid container-fluid-max-xl"
  >
    <a
      aria-expanded={false}
      className="navbar-toggler navbar-toggler-link collapsed link-secondary"
      onClick={[Function]}
    >
      Item 1
      <svg
        className="lexicon-icon lexicon-icon-caret-bottom"
        role="presentation"
      >
        <use
          xlinkHref="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
        />
      </svg>
    </a>
    <div
      className="navbar-collapse collapse"
      data-testid="NavigationBarDropdown"
      onTransitionEnd={[Function]}
    >
      <div
        className="container-fluid container-fluid-max-xl"
      >
        <ul
          className="navbar-nav"
        >
          <li
            className="nav-item active"
          >
            <a
              className="nav-link nav-link active link-secondary"
              href="#1"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            className="nav-item"
          >
            <button
              className="nav-link nav-link btn btn-unstyled btn-block btn-sm"
              type="button"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 2
              </span>
            </button>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link nav-link link-secondary"
              href="#3"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar renders a dropdown when clicking the collapsed element from NavigationBar 1`] = `Promise {}`;

exports[`ClayNavigationBar renders when passing more than one active item 1`] = `
<nav
  className="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
>
  <div
    className="container-fluid container-fluid-max-xl"
  >
    <a
      aria-expanded={false}
      className="navbar-toggler navbar-toggler-link collapsed link-secondary"
      onClick={[Function]}
    >
      Item 1
      <svg
        className="lexicon-icon lexicon-icon-caret-bottom"
        role="presentation"
      >
        <use
          xlinkHref="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
        />
      </svg>
    </a>
    <div
      className="navbar-collapse collapse"
      data-testid="NavigationBarDropdown"
      onTransitionEnd={[Function]}
    >
      <div
        className="container-fluid container-fluid-max-xl"
      >
        <ul
          className="navbar-nav"
        >
          <li
            className="nav-item active"
          >
            <a
              className="nav-link nav-link active link-secondary"
              href="#1"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            className="nav-item active"
          >
            <button
              className="nav-link nav-link active btn btn-unstyled btn-block btn-sm"
              type="button"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 2
              </span>
            </button>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link nav-link link-secondary"
              href="#3"
            >
              <span
                className="navbar-text-truncate"
              >
                Item 3
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should throw a warning when passing more than one active prop to child 1`] = `[Function]`;
